--- a/index.html
+++ b/index.html
@@ -7,5 +7,18 @@
   </head>
   <body>
 
+    <!-- Header -->
+    
+    <div class="header">
+      <h1>Broadway Design</h1>
+      <p>
+        Home <br>
+        Process <br>
+        Work <br>
+        Team <br>
+        Contact <br>
+      </p>
+    </div>
+
   </body>
 </html>
