--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
 
     <!-- Header -->
-    
+
     <div class="header">
       <h1>Broadway Design</h1>
       <p>
@@ -19,6 +19,36 @@
         Contact <br>
       </p>
     </div>
+
+    <!-- Content -->
+
+    <h2>Our Process</h2>
+    <h3>Identify</h3>
+    <p>We focus on the most important details.</p>
+    <h3>Understand</h3>
+    <p>We study our projects inside and out.</p>
+    <h3>Execute</h3>
+    <p>We put everything we have into our work.</p>
+    <h3>Designed in New York</h3>
+    <h3>Portfolio</h3>
+    <p>Coming soon</p>
+    <h3>Team</h3>
+    <p>We're hiring!</p>
+    <h3>Contact</h3>
+    <p>Phone: (555)-555-5555 <br>
+      E-mail: test@example.com <br>
+      Twitter: @test
+    </p>
+
+    <!-- Footer -->
+
+    <p>&copy; Broadway 2016
+      Home
+      About
+      Work
+      Team
+      Contact
+    </p>
 
   </body>
 </html>
