Local URL and images

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Broadway Design</title>ç
+    <title>Broadway Design</title>
     <link href="./resources/css/style.css" type ="text/css" rel="stylesheet">
   </head>
   <body>
@@ -10,31 +10,40 @@
     <!-- Header -->
 
     <div class="header">
-      <h1>Broadway Design</h1>
+      <h1 id="title">Broadway Design</h1>
       <p>
-        Home <br>
-        Process <br>
-        Work <br>
-        Team <br>
-        Contact <br>
+        <a href="#title">Home</a> <br>
+        <a href="#process">Process</a> <br>
+        <a href="#work">Work</a> <br>
+        <a href="#team">Team</a> <br>
+        <a href="#contact">Contact</a> <br>
       </p>
     </div>
 
     <!-- Content -->
 
-    <h2>Our Process</h2>
+    <h2 id="process">Our Process</h2>
+    <p>
+      <img src="./resources/images/identify.svg" alt="Identify">
+    </p>
     <h3>Identify</h3>
     <p>We focus on the most important details.</p>
+    <p>
+      <img src="./resources/images/understand.svg" alt="Understand">
+    </p>
     <h3>Understand</h3>
     <p>We study our projects inside and out.</p>
+    <p>
+      <img src="./resources/images/execute.svg" alt="Execute">
+    </p>
     <h3>Execute</h3>
     <p>We put everything we have into our work.</p>
-    <h3>Designed in New York</h3>
+    <h3 id="work">Designed in New York</h3>
     <h3>Portfolio</h3>
     <p>Coming soon</p>
-    <h3>Team</h3>
+    <h3 id="team">Team</h3>
     <p>We're hiring!</p>
-    <h3>Contact</h3>
+    <h3 id="contact">Contact</h3>
     <p>Phone: (555)-555-5555 <br>
       E-mail: test@example.com <br>
       Twitter: @test
@@ -43,11 +52,11 @@
     <!-- Footer -->
 
     <p>&copy; Broadway 2016
-      Home
-      About
-      Work
-      Team
-      Contact
+      <a href="#title">Home</a> 
+      <a href="#process">About</a>
+      <a href="#work">Work</a>
+      <a href="#team">Team</a>
+      <a href="#contact">Contact</a>
     </p>
 
   </body>
