--- a/index.html
+++ b/index.html
@@ -12,52 +12,62 @@
     <div class="header">
       <h1 id="title">Broadway Design</h1>
       <p>
-        <a href="#title">Home</a> <br>
-        <a href="#process">Process</a> <br>
-        <a href="#work">Work</a> <br>
-        <a href="#team">Team</a> <br>
-        <a href="#contact">Contact</a> <br>
+        <a href="#title" id="link">Home</a> <br> <br>
+        <a href="#process" id="link">Process</a> <br> <br>
+        <a href="#work" id="link">Work</a> <br> <br>
+        <a href="#team" id="link">Team</a> <br> <br>
+        <a href="#contact" id="link">Contact</a> <br>
       </p>
     </div>
 
     <!-- Content -->
 
-    <h2 id="process">Our Process</h2>
-    <p>
-      <img src="./resources/images/identify.svg" alt="Identify">
-    </p>
-    <h3>Identify</h3>
-    <p>We focus on the most important details.</p>
-    <p>
-      <img src="./resources/images/understand.svg" alt="Understand">
-    </p>
-    <h3>Understand</h3>
-    <p>We study our projects inside and out.</p>
-    <p>
-      <img src="./resources/images/execute.svg" alt="Execute">
-    </p>
-    <h3>Execute</h3>
-    <p>We put everything we have into our work.</p>
-    <h3 id="work">Designed in New York</h3>
-    <h3>Portfolio</h3>
-    <p>Coming soon</p>
-    <h3 id="team">Team</h3>
-    <p>We're hiring!</p>
-    <h3 id="contact">Contact</h3>
-    <p>Phone: (555)-555-5555 <br>
-      E-mail: test@example.com <br>
-      Twitter: @test
-    </p>
+    <div class="content">
+      <h2 id="process">Our Process</h2>
+      <p>
+        <img src="./resources/images/identify.svg" alt="Identify">
+      </p>
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+
+      <p>
+        <img src="./resources/images/understand.svg" alt="Understand">
+      </p>
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+
+      <p>
+        <img src="./resources/images/execute.svg" alt="Execute">
+      </p>
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
+
+      <h3 id="work">Designed in New York</h3>
+
+      <h3>Portfolio</h3>
+      <p>Coming soon</p>
+
+      <h3 id="team">Team</h3>
+      <p>We're hiring!</p>
+
+      <h3 id="contact">Contact</h3>
+      <p>Phone: (555)-555-5555 <br>
+        E-mail: test@example.com <br>
+        Twitter: @test
+      </p>
+    </div>
 
     <!-- Footer -->
 
-    <p>&copy; Broadway 2016
-      <a href="#title">Home</a> 
-      <a href="#process">About</a>
-      <a href="#work">Work</a>
-      <a href="#team">Team</a>
-      <a href="#contact">Contact</a>
-    </p>
+    <div class="footer">
+      <p>&copy; Broadway 2016
+        <a href="#title" id="link">Home</a>
+        <a href="#process" id="link">About</a>
+        <a href="#work" id="link">Work</a>
+        <a href="#team" id="link">Team</a>
+        <a href="#contact" id="link">Contact</a>
+      </p>
+    </div>
 
   </body>
 </html>
